FIxed dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-html, body {
+body {
 
     padding: 0;
     
@@ -7,8 +7,7 @@ html, body {
 
     background-color: #f0f0f0;
 
-    overscroll-behavior: none;
-    
+    overscroll-behavior: none;    
     
     }
 
